# soa-bridge-match

./: .gitignore  DESIGN.md  README.md  pyproject.toml
doc/: SCENARIOS.md
doc/Mike'sConnectathonTesting/: LZZT_FHIR_Bundle_01-701-1115_CarePlan.xlsx  LZZT_FHIR_Bundle_01-701-1115_Encounters.xlsx  LZZT_FHIR_Bundle_01-701-1115_ObservationDefinition.xlsx  LZZT_FHIR_Bundle_01-701-1115_ResearchStudy.xlsx  LZZT_FHIR_Bundle_01-701-1115_ResearchSubject_20220501.xlsx  LZZT_FHIR_Bundle_01-701-1115_ServiceRequest.xlsx  LZZT_FHIR_Bundle_01-701-9999_CarePlan.xlsx  LZZT_FHIR_Bundle_01-701-9999_Encounters.xlsx  LZZT_FHIR_Bundle_01-701-9999_Observation.xlsx  LZZT_FHIR_Bundle_01-701-9999_ObservationDefinition.xlsx  LZZT_FHIR_Bundle_01-701-9999_Patient.xlsx  LZZT_FHIR_Bundle_01-701-9999_PlanDefinition.xlsx  LZZT_FHIR_Bundle_01-701-9999_ResearchStudy.xlsx  LZZT_FHIR_Bundle_01-701-9999_ResearchSubject.xlsx  LZZT_FHIR_Bundle_01-701-9999_ServiceRequest.xlsx  README.md
doc/config/: dm.yml  lb.yml  sv.yml  vs.yml
doc/connectathon_30/: SCENARIOS.md
doc/connectathon_31/: README.md
doc/example/: Insomnia_2022-05-31.json  Insomnia_FHIR_DevDays_SoA.json  main.py  windows.py
doc/resources/: LOINC_to_LB_Mapping Document_FINAL.csv  LOINC_to_LB_Mapping Document_FINAL.xlsx  (+2 more)
src/: bundler.py  connector.py  dataset.py  workbook.ipynb
upstream/: LZZT_FHIR_Bundle_10_Patients_All_Resources_dupes.json  README.md  add_medications.py  add_random_obs.py  add_unscheduled_visit.py  add_visits.py  check_bundle.py  clone_subject.py  patch_json.py  post_fhir_bundle.sh
workbooks/: workbook.ipynb
(+136 files in other folders)
